--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -35,11 +35,13 @@
             android:padding="10dp"
             android:text="@string/strCompanyDesc" />
 
-        <ImageView
-            android:layout_width="300dp"
-            android:layout_height="400dp"
-            android:layout_gravity="center"
-            android:src="@drawable/maps" />
+        <include
+            layout="@layout/activity_maps"/>
+        <!--<ImageView-->
+            <!--android:layout_width="300dp"-->
+            <!--android:layout_height="400dp"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:src="@drawable/maps" />-->
     </LinearLayout>
 
     <android.support.design.widget.NavigationView
