fix logical error, success show game details in GameDetailActivity, and make description readable in game details layout

--- a/app/src/main/res/layout/activity_game_detail.xml
+++ b/app/src/main/res/layout/activity_game_detail.xml
@@ -90,6 +90,7 @@
             android:id="@+id/gameDetailsDesc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxWidth="275dp"
             android:text="asdasdsa" />
 
     </GridLayout>
