--- a/app/src/main/res/layout/row_home_gamelist.xml
+++ b/app/src/main/res/layout/row_home_gamelist.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:columnCount="2">
 
 
     <GridLayout
@@ -36,7 +36,9 @@
 
         <TextView
             android:id="@+id/homeGameDesc"
-            android:maxWidth="200dp" />
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="fill_horizontal|bottom" />
 
         <TextView android:text="@string/strPlayHours" />
 
@@ -50,18 +52,14 @@
 
     </GridLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-        <Button
-            android:id="@+id/btnPlay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="30dp"
-            android:text="@string/strPlayGame" />
+    <Button
+        android:id="@+id/btnPlay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginStart="30dp"
+        android:text="@string/strPlayGame" />
 
-    </LinearLayout>
 
-</LinearLayout>
+</GridLayout>
